debug-sync/fe-be

--- a/src/modules/mail/templates/accepted-payment.hbs
+++ b/src/modules/mail/templates/accepted-payment.hbs
@@ -22,11 +22,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>Event:</strong></td>
-                                    <td>{{eventName}}</td>
+                                    <td>{{eventTitle}}</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Amount:</strong></td>
-                                    <td>{{amount}}</td>
+                                    <td>{{totalIdr}}</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Date:</strong></td>
